--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 
 nav a:hover {
     background-color: #FFE1A8;
-    color: #C9CBA3;
+    color: #white;
 }
 
 .book, .join, .book:hover, .join:hover {
