--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-    background-color: #472D30;
+    background-color: #FFE1A8;
 }
 
 nav a:hover {
@@ -25,7 +25,7 @@ nav a:hover {
 
 .book, .join, .book:hover, .join:hover {
     background-color: #c9cba3;
-    color: #472D30;
+    color: #FFE1A8;
 }
 
 #background {
@@ -34,11 +34,11 @@ nav a:hover {
 
 .msg {
     background-color: #c9cba3;
-    color: #472D30;
+    color: #FFE1A8;
 }
 
 footer {
-    background-color: #472D30;
+    background-color: #FFE1A8;
     color: #ffffff;
 }
 
