--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-    background-color: #FFE1A8;
+    background-color: hsl(38, 73%, 93%);
     color: ffffff;
 }
 
@@ -26,7 +26,7 @@ nav a:hover {
 
 .book, .join, .book:hover, .join:hover {
     background-color: #c9cba3;
-    color: #FFE1A8;
+    color: black;
 }
 
 #background {
@@ -35,12 +35,12 @@ nav a:hover {
 
 .msg {
     background-color: #c9cba3;
-    color: #FFE1A8;
+    color: black;;
 }
 
 footer {
-    background-color: #FFE1A8;
-    color: #ffffff;
+    background-color: hsl(38, 73%, 93%);
+    color: black;
 }
 
 footer a:hover {
