--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     background-color: #e2eafc;
 }
 
+#hero-msg h1,
+#hero-msg h4 {
+    text-align: center;
+}
+
 header {
     background-color: hsl(38, 73%, 93%);
     color: #ffffff; /* Fixed the color value */
@@ -44,8 +49,7 @@ footer a:hover {
 
 /* Center only the images with the center-image class */
 .center-image {
-    display: block;
-    margin: 0 auto;
+        margin: 0 auto;
 }
 
 /* Widths */
