--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
+/* Import font CSS */
+
+  @import url('https://fonts.google.com/');
+
+/* Define font-family for the headline with backup fonts */
+.home-title, .msg h2 {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
 /* CSS for the Whole Page Container */
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
 
-/* Background Colors */
+/* body */
 body {
     background-color: #e2eafc;
+    font-family: 'roboto', Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 
 #hero-msg h1,
@@ -16,17 +34,17 @@ body {
 
 header {
     background-color: hsl(38, 73%, 93%);
-    color: #ffffff; /* Fixed the color value */
+    color: #ffffff; 
 }
 
 nav a:hover {
     background-color: black;
-    color: #ffffff; /* Fixed the color value */
+    color: #ffffff; 
 }
 
 .book, .join, .book:hover, .join:hover {
     background-color: #c9cba3;
-    color: #472D30; /* Fixed the color value */
+    color: #472D30; 
 }
 
 #background {
@@ -35,13 +53,25 @@ nav a:hover {
 
 .msg {
     background-color: #c9cba3;
-    color: #472D30; /* Fixed the color value */
+    color: #472D30; 
+    line-height: 1.5em;
+    padding: 35px;
 }
+
+/* padding to the paragraphs inside the .msg section */
+.msg p {
+    padding-bottom: 15px;
 
 footer {
     background-color: hsl(38, 73%, 93%);
-    color: #472D30; /* Fixed the color value */
+    color: #472D30; 
+    padding: 25px 50px;
+    margin-top: 200px;
 }
+
+/* Add padding to the images inside the .social section in the footer */
+footer .social img {
+    padding-top: 15px;
 
 footer a:hover {
     text-decoration: underline;
@@ -52,20 +82,44 @@ footer a:hover {
         margin: 0 auto;
 }
 
-/* Widths */
+.icon {
+    padding-top: 10px;
+
+/* logos */
 .logo, .icon {
     width: 80px;
+}
+#logo_link {
+    padding-top: 5px;
 }
 
 #hero-img {
     width: 100%;
 }
-
+/* padding navigation links */
+nav a {
+    text-decoration: none;
+    color: #faeded;
+    text-align: center;
+    padding: 35px;
+    
 /* Remove Underlines from Links */
-nav a, .book, .join, footer a {
+.book, .join, {
     text-decoration: none;
     text-align: center;
+    padding: 15px 30px;
+    font-size: 18px;margin-top: 50px;
+    border-radius: 5px;
+
 }
+
+card-img {
+    border: 10px solid black;
+}
+
+/*  margin to the .rivers-card, .camping-card, and .rapids-card sections */
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 
 .button-box {
     text-align: center;
@@ -77,4 +131,5 @@ footer p {
 
 main section {
     text-align: center;
+    box-sizing: border-box;
 }
