--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-/* Import font CSS */
-
-  @import url('https://fonts.google.com/');
+/* Import font CSS - replace with the correct font URL */
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 /* Define font-family for the headline with backup fonts */
 .home-title, .msg h2 {
@@ -18,11 +17,12 @@
 /* body */
 body {
     background-color: #e2eafc;
-    font-family: 'roboto', Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
 }
+
 h2 {
     margin: 0;
 }
@@ -33,18 +33,18 @@ h2 {
 }
 
 header {
-    background-color: hsl(38, 73%, 93%);
-    color: #ffffff; 
+    background-color: hsl(38, 73%, 93);
+    color: #ffffff;
 }
 
 nav a:hover {
     background-color: black;
-    color: #ffffff; 
+    color: #ffffff;
 }
 
 .book, .join, .book:hover, .join:hover {
     background-color: #c9cba3;
-    color: #472D30; 
+    color: #472D30;
 }
 
 #background {
@@ -53,7 +53,7 @@ nav a:hover {
 
 .msg {
     background-color: #c9cba3;
-    color: #472D30; 
+    color: #472D30;
     line-height: 1.5em;
     padding: 35px;
 }
@@ -61,10 +61,11 @@ nav a:hover {
 /* padding to the paragraphs inside the .msg section */
 .msg p {
     padding-bottom: 15px;
+}
 
 footer {
-    background-color: hsl(38, 73%, 93%);
-    color: #472D30; 
+    background-color: hsl(38, 73%, 93);
+    color: #472D30;
     padding: 25px 50px;
     margin-top: 200px;
 }
@@ -72,6 +73,7 @@ footer {
 /* Add padding to the images inside the .social section in the footer */
 footer .social img {
     padding-top: 15px;
+}
 
 footer a:hover {
     text-decoration: underline;
@@ -79,16 +81,18 @@ footer a:hover {
 
 /* Center only the images with the center-image class */
 .center-image {
-        margin: 0 auto;
+    margin: 0 auto;
 }
 
 .icon {
     padding-top: 10px;
+}
 
 /* logos */
 .logo, .icon {
     width: 80px;
 }
+
 #logo_link {
     padding-top: 5px;
 }
@@ -96,30 +100,34 @@ footer a:hover {
 #hero-img {
     width: 100%;
 }
+
 /* padding navigation links */
 nav a {
     text-decoration: none;
     color: #faeded;
     text-align: center;
     padding: 35px;
-    
-/* Remove Underlines from Links */
-.book, .join, {
+}
+
+/* Remove Underlines from Links - fixed syntax error */
+.book, .join {
     text-decoration: none;
     text-align: center;
     padding: 15px 30px;
-    font-size: 18px;margin-top: 50px;
+    font-size: 18px;
+    margin-top: 50px;
     border-radius: 5px;
-
 }
 
-card-img {
+/* Added missing period to the class selector .card-img */
+.card-img {
     border: 10px solid black;
 }
 
-/*  margin to the .rivers-card, .camping-card, and .rapids-card sections */
+/* margin to the .rivers-card, .camping-card, and .rapids-card sections */
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
+}
 
 .button-box {
     text-align: center;
@@ -129,6 +137,151 @@ footer p {
     font-size: 1.2em;
 }
 
+/* Added missing period to the class selector .main section */
+main section {
+    text-align: center;
+    box-sizing: border-box;
+}
+/* Import font CSS - replace with the correct font URL */
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+/* Define font-family for the headline with backup fonts */
+.home-title, .msg h2 {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+/* CSS for the Whole Page Container */
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+/* body */
+body {
+    background-color: #e2eafc;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
+}
+
+#hero-msg h1,
+#hero-msg h4 {
+    text-align: center;
+}
+
+header {
+    background-color: hsl(38, 73%, 93);
+    color: #ffffff;
+}
+
+nav a:hover {
+    background-color: black;
+    color: #ffffff;
+}
+
+.book, .join, .book:hover, .join:hover {
+    background-color: #c9cba3;
+    color: #472D30;
+}
+
+#background {
+    height: 725px;
+}
+
+.msg {
+    background-color: #c9cba3;
+    color: #472D30;
+    line-height: 1.5em;
+    padding: 35px;
+}
+
+/* padding to the paragraphs inside the .msg section */
+.msg p {
+    padding-bottom: 15px;
+}
+
+footer {
+    background-color: hsl(38, 73%, 93);
+    color: #472D30;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+
+/* Add padding to the images inside the .social section in the footer */
+footer .social img {
+    padding-top: 15px;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+/* Center only the images with the center-image class */
+.center-image {
+    margin: 0 auto;
+}
+
+.icon {
+    padding-top: 10px;
+}
+
+/* logos */
+.logo, .icon {
+    width: 80px;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+#hero-img {
+    width: 100%;
+}
+
+/* padding navigation links */
+nav a {
+    text-decoration: none;
+    color: #faeded;
+    text-align: center;
+    padding: 35px;
+}
+
+/* Remove Underlines from Links - fixed syntax error */
+.book, .join {
+    text-decoration: none;
+    text-align: center;
+    padding: 15px 30px;
+    font-size: 18px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+/* Added missing period to the class selector .card-img */
+.card-img {
+    border: 10px solid black;
+}
+
+/* margin to the .rivers-card, .camping-card, and .rapids-card sections */
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.button-box {
+    text-align: center;
+}
+
+footer p {
+    font-size: 1.2em;
+}
+
+/* Added missing period to the class selector .main section */
 main section {
     text-align: center;
     box-sizing: border-box;
