--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ footer a:hover {
 /* padding navigation links */
 nav a {
     text-decoration: none;
-    color: #faeded;
+    color: black;
     text-align: center;
     padding: 35px;
 }
