--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav a:hover {
 }
 
 footer {
-    background-color: hsl(38, 73%, 93);
+    background-color: hsl(40, 1%, 59%);
     color: #472D30;
     padding: 25px 50px;
     margin-top: 200px;
