--- a/style.css
+++ b/style.css
@@ -33,16 +33,23 @@ h2 {
 #hero-msg h1,
 #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 
 header {
     background-color: hsl(38, 73%, 93);
     color: #ffffff;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a:hover {
-    background-color: black;
-    color: #ffffff;
+    transform: rotate(15deg);
 }
 
 .book, .join, .book:hover, .join:hover {
@@ -71,6 +78,9 @@ footer {
     color: #472D30;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 /* Add padding to the images inside the .social section in the footer */
@@ -79,7 +89,7 @@ footer .social img {
 }
 
 footer a:hover {
-    text-decoration: underline;
+    transform: rotate(15deg);
 }
 
 /* Center only the images with the center-image class */
@@ -98,6 +108,8 @@ footer a:hover {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 #hero-img {
@@ -150,4 +162,50 @@ main section {
 /* Rounded borders for social media icons */
 .social img {
     border-radius: 50%; 
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card { 
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background { 
+    grid-column: 4/9;
+    grid-row: 1/11;
+}
+.mountains { 
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
+.msg { 
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
