--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ footer a:hover {
 /* padding navigation links */
 nav a {
     text-decoration: none;
-    color: #000000;
+    color: white;
     text-align: center;
     padding: 35px;
     
