--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ main section {
 .rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
+    z-index: 1;
 }
 .camping-card {
     grid-column: 5/7;
