--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 
 /* body */
 body {
-    background-color: #a9b1c5;
+    background-color: white;
     font-family: 'Roboto', Arial, sans-serif;
     font-size: 22px;
     margin: 0;
