--- a/style.css
+++ b/style.css
@@ -236,6 +236,11 @@ main section {
     transform: scale(1.1); 
     transition: background-color 0.3s, transform 0.3s; 
 }
+a.join:hover {
+    color: #ff6600; /* Change the text color to your desired color */
+    text-decoration: underline; /* Add an underline when hovering */
+}
+
 
 
 @media screen and (max-width: 900px) {
