--- a/style.css
+++ b/style.css
@@ -232,14 +232,13 @@ main section {
 
 }
 .button-box:hover {
-    background-color: #6f7364;
     transform: scale(1.1); 
     transition: background-color 0.3s, transform 0.3s; 
 }
 
 a.join:hover {
-    color: #ff6600; /* Change the text color to your desired color */
-    text-decoration: underline; /* Add an underline when hovering */
+    color: #ff6600;
+    text-decoration: underline;
 }
 
 
