--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ main section {
     grid-row: 5/8;
     width: 100%;
     box-shadow: 5px 5px 10px #6f7364;
+    z-index: -1;
 }
 .msg { 
     grid-column: 6/10;
