--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ form {
   }
   #feedback {
     background-color: antiquewhite;
-    position: absolute;
+    position: 'center'
     top: 0;
     left: 0;
     right: 0;
