--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -109,13 +109,17 @@ body, html {
   }
   
   /* Full-width input fields */
-    input[type=text] label[type=text] textarea[type=text] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-  }
+  /* Full-width input fields */
+input[type=text],
+input[type=email],
+textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
   
   /* input[type=text]:focus, input[type=password]:focus {
     background-color: #ddd;
