--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -1,8 +1,7 @@
+/* Form styling */
 form {
-    /* Center the form on the page */
     margin: 0 auto;
     width: 400px;
-    /* Form outline */
     padding: 1em;
     border: 1px solid #ccc;
     border-radius: 1em;
@@ -19,7 +18,6 @@ form {
   }
   
   label {
-    /* Uniform size & alignment */
     display: inline-block;
     width: 90px;
     text-align: right;
@@ -27,103 +25,29 @@ form {
   
   input,
   textarea {
-    /* To make sure that all text fields have the same font settings
-       By default, textareas have a monospace font */
     font: 1em sans-serif;
-  
-    /* Uniform text field size */
     width: 300px;
     box-sizing: border-box;
-  
-    /* Match form field borders */
     border: 1px solid #999;
   }
   
   input:focus,
   textarea:focus {
-    /* Additional highlight for focused elements */
     border-color: #000;
   }
   
   textarea {
-    /* Align multiline text fields with their labels */
     vertical-align: top;
-  
-    /* Provide space to type some text */
     height: 5em;
   }
   
+  /* Button styling */
   .button {
-    /* Align buttons with the text fields */
-    padding-left: 90px; /* same size as the label elements */
+    padding-left: 90px;
+    margin-left: 0.5em;
   }
   
   button {
-    /* This extra margin represent roughly the same space as the space
-       between the labels and their text fields */
-    margin-left: 0.5em;
-  }
-  #feedback {
-    background-color: antiquewhite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: .5em;
-    /* make this element invisible until we are ready for it */
-    display: none;      
-}
-.moveDown {
-    margin-top: 3em;
-}
-body, html {
-    height: 100%;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-.bg-img {
-    /* The image used */
-    background-image: url("rapid_images_form.jfif");
-  
-    /* Control the height of the image */
-    min-height: 380px;
-  
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  /* Add styles to the form container */
-.container {
-    position: absolute;
-    right: 0;
-    margin: 20px;
-    max-width: 300px;
-    padding: 16px;
-    background-color: white;
-  }
-  
-  /* Full-width input fields */
-  /* Full-width input fields */
-input[type=text],
-input[type=email],
-textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-}
-
-  
- 
-  /* Set a style for the submit button */
-.button {
     background-color: #04AA6D;
     color: white;
     padding: 16px 20px;
@@ -133,6 +57,59 @@ textarea {
     opacity: 0.9;
   }
   
-.button:hover {
+  .button:hover {
     opacity: 1;
   }
+  
+  /* Feedback styling */
+  #feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    display: none;
+  }
+  
+  .moveDown {
+    margin-top: 3em;
+  }
+  
+  /* Body and HTML styling */
+  body, html {
+    height: 100%;
+    box-sizing: border-box;
+  }
+  
+  /* Background image styling */
+  .bg-img {
+    background-image: url("rapid_images_form.jfif");
+    min-height: 380px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+  /* Container styling */
+  .container {
+    position: absolute;
+    right: 0;
+    margin: 20px;
+    max-width: 300px;
+    padding: 16px;
+    background-color: white;
+  }
+  
+  /* Full-width input fields */
+  input[type=text],
+  input[type=email],
+  textarea {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+  }
+  
