--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -47,7 +47,7 @@ form {
     margin-left: 0.5em;
   }
   
-  button {
+  button1 {
     background-color: #04AA6D;
     color: white;
     padding: 16px 20px;
@@ -57,7 +57,7 @@ form {
     opacity: 0.9;
   }
   
-  .button:hover {
+  .button1:hover {
     opacity: 1;
   }
   
