--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -94,7 +94,7 @@ form {
   
   /* Container styling */
   .container {
-    position: absolute;
+    position: relative;
     right: 0;
     margin: 20px;
     max-width: 300px;
