--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -123,7 +123,7 @@ form {
     max-width: 100%;  /* Set a maximum width for responsiveness */
     position: relative;
     z-index: 1;
-    background-size: cover;  /* or 'contain' depending on your preference */
+    background-size: contain;  /* or 'contain' depending on your preference */
 }
 
 
