--- a/stylecontactus.css
+++ b/stylecontactus.css
@@ -37,7 +37,8 @@ footer {
     justify-content: space-around;
     align-items: center;
 }
-
+#hero-img {
+    width: 100%;
 /* padding to the images inside the .social section in the footer */
 footer .social img {
     padding-top: 15px;
