--- a/style.css
+++ b/style.css
@@ -344,10 +344,14 @@ form {
   }
  /* Container styling */
  .container {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
     right: 0;
     margin: 20px;
-    max-width: 300px;
+    max-width: 200px;
     padding: 16px;
     background-color: white;
   }
@@ -362,8 +366,7 @@ form {
     border: none;
     background: #f1f1f1;
   }
-  .container {
-    position: relative;
+  
 }
 .form {
     position: absolute;
