--- a/style.css
+++ b/style.css
@@ -268,10 +268,10 @@ a.join:hover {
 /* Form styling */
 form {
     margin: 0 auto;
-    width: 400px;
-    padding: 1em;
+    width: 800px;
+    padding: 200px;
     border: 1px solid #ccc;
-    border-radius: 1em;
+    border-radius: 2em;
   }
   
   ul {
