--- a/style.css
+++ b/style.css
@@ -367,13 +367,13 @@ form {
     background: #f1f1f1;
   }
 
-.form {
+/* .form {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-}
+} */
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
