--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ form {
     padding: 15px;
     margin: 5px 0 22px 0;
     border: none;
-    background: #f1f1f1;
+    /* background: #f1f1f1; */
   }
 
 /* .form {
