--- a/style.css
+++ b/style.css
@@ -94,16 +94,16 @@ footer {
     background-color: hsl(40, 1%, 59%);
     color: #472D30;
     padding: 25px 50px;
-    margin-top: 200px;
+    /* margin-top: 200px; */
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 /* padding to the images inside the .social section in the footer */
-/* footer .social img {
+footer .social img {
     padding-top: 15px;
-} */
+}
 
 footer a:hover {
     transform: rotate(15deg);
