--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ form {
     margin: 40px;
     max-width: 400px;
     padding: 16px;
-    background-color: white;
+    /* background-color: white; */
   }
   
   /* Full-width input fields */
